leastconn director (need vdi_freeconn patch)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,8 @@ libvmod_unidirectors_la_SOURCES = \
 	fall_back.c \
 	hash.c \
 	random.c \
-	round_robin.c
+	round_robin.c \
+	least_conn.c
 
 nodist_libvmod_unidirectors_la_SOURCES = \
 	vcc_if.c \
